--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+notify = { version = "8.1.0" }
+futures = { version = "0.3.31" }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
