--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 notify = { version = "8.1.0" }
 futures = { version = "0.3.31" }
-serde_json = "1.0"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = { version = "1.0" }
+dirs = { version = "6.0.0" }
 tokio = { version = "1", features = ["full"] }
