--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,13 @@ futures = { version = "0.3.31" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = { version = "1.0" }
 dirs = { version = "6.0.0" }
+libp2p = { version = "0.56", features = [
+  "macros",
+  "mdns",
+  "ping",
+  "request-response",
+  "noise",
+  "tcp",
+  "yamux"
+] }
 tokio = { version = "1", features = ["full"] }
