--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ futures = { version = "0.3.31" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = { version = "1.0" }
 dirs = { version = "6.0.0" }
-libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "tokio"] }
+libp2p = { path="../../../github/rust/rust-libp2p/libp2p", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "tokio"] }
+libp2p-swarm-derive = { version = "0.35" }
 tokio = { version = "1", features = ["full"] }
