--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1", features = ["full"] }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3" }
 sha2 = { version = "0.10" }
+hmac = { version = "0.12" }
 
 [dev-dependencies]
 tempfile = { version = "3.8" }
